kubernetes/apps/network/proxy/apps/3dp.yaml
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: &name 3dp
  labels:
    app: *name
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: 3dp
subsets:
  - addresses:
      - ip: 192.168.1.104
    ports:
      - port: 80
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name 3dp
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "3dp.${SECRET_DOMAIN}"
spec:
  ingressClassName: internal
  rules:
    - host: "3dp.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *name
                port:
                  name: http
