kubernetes/apps/network/proxy/apps/dad.yaml
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: &name proxy-dadnas
  labels:
    app: *name
spec:
  type: ExternalName
  externalName: "${DADNAS_IP}"
  ports:
    - name: "http"
      port: 80
      targetPort: 5000
      protocol: TCP
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name proxy-dadnas
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: "dad.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *name
                port:
                  name: http
