kubernetes/apps/network/proxy/apps/dadnas.yaml
---
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/master/service.json
apiVersion: v1
kind: Service
metadata:
  name: &name dadnas
  labels:
    app: *name
spec:
  type: ExternalName
  externalName: "${DADNAS_CNAME}"
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
---
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/master/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name dadnas
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "dad.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    gatus.home-operations.com/endpoint: |-
      client:
        dns-resolver: tcp://1.1.1.1:53
      group: external
      ui:
        hide-hostname: true
        hide-url: true
spec:
  ingressClassName: external
  rules:
    - host: "dad.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *name
                port:
                  name: http
