kubernetes/apps/network/proxy/apps/grey.yaml
---
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/master/service.json
apiVersion: v1
kind: Service
metadata:
  name: &name grey
  labels:
    app: *name
spec:
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
    - name: ovpn
      port: 1196
      targetPort: 1196
      protocol: UDP
---
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/master/endpoints.json
apiVersion: v1
kind: Endpoints
metadata:
  name: grey
subsets:
  - addresses:
      - ip: ${GREY_IP}
    ports:
      - name: http
        port: 5000
        protocol: TCP
      - name: ovpn
        port: 1196
        protocol: UDP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name grey
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames: ["grey.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: &ns network
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: *name
          namespace: *ns
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
---
# NOTE: UDP port 1196 was previously handled via nginx ConfigMap
# Envoy Gateway requires a UDPRoute or separate gateway configuration for UDP traffic
# This ConfigMap is commented out and UDP routing needs to be configured separately
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: grey-udp-service
# data:
#   "1196": "network/grey:1196"
