kubernetes/apps/network/proxy/apps/hassio.yaml
---
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/master/service.json
apiVersion: v1
kind: Service
metadata:
  name: &name hassio
  labels:
    app: *name
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8123
      protocol: TCP
---
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/master/endpoints.json
apiVersion: v1
kind: Endpoints
metadata:
  name: hassio
subsets:
  - addresses:
      - ip: ${HASSIO_IP}
    ports:
      - name: http
        port: 8123
        protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name hassio
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 200"]
spec:
  hostnames: ["ha.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: &ns network
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: *name
          namespace: *ns
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
