kubernetes/apps/network/proxy/apps/ntfy-smtp.yaml
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: &name ntfy-smtp
  labels:
    app: *name
spec:
  ports:
    - name: smtp
      port: 5225
      targetPort: 5225
      protocol: TCP
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: ntfy-smtp
subsets:
  - addresses:
      - ip: 192.168.5.232
    ports:
      - port: 5225
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name ntfy-smtp
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "mx1.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: "mx1.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *name
                port:
                  name: smtp
