kubernetes/apps/network/proxy/apps/prnt3d.yaml
---
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/master/service.json
apiVersion: v1
kind: Service
metadata:
  name: &name prnt3d
  labels:
    app: *name
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/master/endpoints.json
apiVersion: v1
kind: Endpoints
metadata:
  name: prnt3d
subsets:
  - addresses:
      - ip: 192.168.107.111
    ports:
      - name: http
        port: 80
        protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name prnt3d
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames: ["3dp.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: &ns network
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: *name
          namespace: *ns
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
